--- a/docs/templates/_base.njk
+++ b/docs/templates/_base.njk
@@ -23,17 +23,18 @@
   </head>
   <body>
     <div class="container">
-      <h1>Documentation</h1>
+
+      {% block content %}
+      {% endblock %}
+      <br><br>
+
       <img class="bottom-logo" src="/docs/assets/logo-unframed.svg"/>
     </div>
 
     <div id="toc">
     </div>
 
-    <div class="footer">
-      <a href="/docs/overview">Docs</a> <hr>
-      <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
-    </div>
+    {% include 'chunks/_footer.njk' %}
 
     <div id="copy-confirm" class="overlay">
       Copied to Clipboard!
