--- a/docs/templates/_base.njk
+++ b/docs/templates/_base.njk
@@ -34,6 +34,8 @@
     <div id="toc">
     </div>
 
+    {% include 'chunks/_nav.njk' %}
+
     {% include 'chunks/_footer.njk' %}
 
     <div id="copy-confirm" class="overlay">
