--- a/docs/templates/chunks/_footer.njk
+++ b/docs/templates/chunks/_footer.njk
@@ -1,4 +1,12 @@
 <div class="footer">
-  <a href="/docs/overview">Docs</a> <hr>
+  <a href="/docs/overview">Docs</a>
+  <hr>
   <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
+
+  <a href="/" class="no-underline home"><img src="/docs/assets/logo-notype.svg"/></a>
+  <a id="navtoggle" class="nav no-underline">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </a>
 </div>
