complete the docs nav with github search

--- a/docs/templates/chunks/_install-cdn.njk
+++ b/docs/templates/chunks/_install-cdn.njk
@@ -1,1 +1,7 @@
-<pre copy><code class="html">&lt;script src="https://unpkg.com/@connectv/core/dist/bundles/connective.es5.min.js"&gt;&lt;/script&gt;</code></pre>
+<pre><code class="html">&lt;!-- Click on each line to copy it --&gt;
+
+&lt;!-- Dependencies --&gt;
+&lt;script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"&gt;&lt;/script&gt;
+&lt;script src="https://cdn.jsdelivr.net/npm/lodash@4.17.14/lodash.min.js"&gt;&lt;/script&gt;
+
+&lt;script src="https://unpkg.com/@connectv/core/dist/bundles/connective.es5.min.js"&gt;&lt;/script&gt;</code></pre>
