--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -163,6 +163,8 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
   background: #f5f5f5;
   transform: translateX(-110vw);
   transition: transform .5s;
+  display: flex;
+  flex-direction: column;
 }
 
 #nav.active {
@@ -170,7 +172,114 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
 }
 
 #nav .contents {
-  margin: 64px;
+  margin: 32px;
+  margin-bottom: 0px;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+#nav .search {
+  position: relative;
+  margin: 32px;
+  margin-bottom: 0px;
+}
+
+#nav .search input {
+  display: block;
+  width: calc(100% - 9px);
+  font-family: 'Hind', sans-serif;
+  font-size: 14px;
+  padding: 4px 0;
+  padding-left: 8px;
+
+  border: 1px solid #e0e0e0;
+  background: white;
+
+  border-radius: 32px;
+}
+
+#nav .search input::placeholder {
+  color: #9e9e9e;
+  font-style: italic;
+}
+
+#nav .search p {
+  font-size: 10px;
+  color: #9e9e9e;
+  margin-left: 8px;
+}
+
+#nav .search .icon {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 4px;
+  right: 8px;
+}
+
+#nav .search .icon.loading {
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+}
+
+#nav .search .icon img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  transition: transform .15s, opacity .15s;
+}
+
+#nav .search .icon.loading img.handle {
+  opacity: 0;
+}
+
+#nav .search .icon.loading img.ring {
+  transform: scale(1.5) translateX(2.156px) translateY(2.156px);
+}
+
+@-webkit-keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+#nav a {
+  transition: opacity .5s;
+}
+
+#nav a::before {
+  content: ' ';
+  position: absolute;
+  left: -8px; right: -8px;
+  top: 8px; bottom: 8px;
+  background: #ffd740;
+  z-index: -1;
+  border-radius: 3px;
+  opacity: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: opacity .5s, transform .5s;
+}
+
+#nav a.highlight::before {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+#nav a.faded {
+  opacity: .25;
 }
 
 #nav hr {
@@ -206,7 +315,7 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
 .footer .home {
   height: 48px;
   position: absolute;
-  right: 64px;
+  right: 32px;
 }
 
 .footer img {
@@ -216,7 +325,7 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
 .footer .nav {
   height: 48px;
   position: absolute;
-  left: 64px;
+  left: 32px;
   text-align: center;
   cursor: pointer;
   display: flex; align-items: center; justify-content: space-between;
