--- a/docs/templates/_base.njk
+++ b/docs/templates/_base.njk
@@ -18,6 +18,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 
+    <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.14/lodash.min.js"></script>
+    <script src="https://unpkg.com/@connectv/core/dist/bundles/connective.es5.min.js"></script>
+
     <link href="/docs/assets/styles.css" rel="stylesheet">
     <script src="/docs/assets/main.js"></script>
   </head>
