--- a/docs/templates/_base.njk
+++ b/docs/templates/_base.njk
@@ -32,7 +32,9 @@
       {% endblock %}
       <br><br>
 
+      {% block bottomlogo %}
       <img class="bottom-logo" src="/docs/assets/logo-unframed.svg"/>
+      {% endblock %}
     </div>
 
     <div id="toc">
