fix all links in main page

--- a/docs/templates/index.njk
+++ b/docs/templates/index.njk
@@ -7,7 +7,7 @@
 <b>CONNECTIVE</b> facilitates large-scale
 <a href="https://en.wikipedia.org/wiki/Reactive_programming" target="_blank">reactive programming</a>
 in Javascript/Typescript.
-It enables declarative creation of large and complex data/event flows and supports re-use of flows.
+It enables declarative creation of large and complex data/event flows and encourages re-use of flows.
 
 {% include 'chunks/_install-npm.njk' %}
 <br><br>
@@ -61,6 +61,11 @@ Generally <b>CONNECTIVE</b> masks the API of <b>RxJS</b> so for simpler use case
 <b>RxJS</b> directly, that's why knowledge of <b>RxJS</b> is not mandatory to get started with <b>CONNECTIVE</b>.
 However, none of the functionality of <b>RxJS</b> is masked just for masking it, so for more advanced usage
 you would definitely need to be familiar with <b>RxJS</b>.
+
+<br><br>
+
+You can read more in detail on how <b>CONNECTIVE</b> creates observable sequences based on your flows
+<a href="/docs/under-the-hood">here</a>.
 
 <br><br>
 <br><br>
