add overview and prev/next nav

--- a/docs/templates/404.njk
+++ b/docs/templates/404.njk
@@ -10,7 +10,8 @@
   then head back home as we've got more tales of awesome
   for your weary ears.</p>
   <div class="buttons">
-    <a class="button" href="/">Head Back Home</a>
+    <a href="javascript:void()" onclick="window.history.back()">Go Back</a>
+    <a class="button" href="/">Home</a>
   </div>
   <br><br>
   <img src="/docs/assets/404.svg"/>
@@ -19,4 +20,7 @@
 {% endblock %}
 
 {% block bottomlogo %}
+{% endblock %}
+
+{% block prevnext %}
 {% endblock %}
