--- a/docs/templates/index.njk
+++ b/docs/templates/index.njk
@@ -74,3 +74,6 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
 
 {% include 'chunks/main/_contact.njk' %}
 {% endblock %}
+
+{% block prevnext %}
+{% endblock %}
