--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -71,6 +71,10 @@ pre + .buttons {
   margin-bottom: 24px;
 }
 
+.buttons a:not(.button) {
+  margin: 0 32px;
+}
+
 .logo {
   max-width: 380px;
   width: 100%;
@@ -301,6 +305,92 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
   }
 }
 
+/*********** prevnext ***********/
+
+#prevnext {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  margin-top: 64px;
+  margin-bottom: 128px;
+  width: 75%;
+}
+
+@media screen and (max-width: 1200px) {
+  #prevnext {
+    width: 100%;
+  }
+}
+
+#prevnext hr {
+  border: none;
+  width: 4px;
+  height: 24px;
+  background: #e0e0e0;
+}
+
+#prevnext #prev,
+#prevnext #next {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  opacity: 0;
+}
+
+#prevnext #prev.active,
+#prevnext #next.active {
+  cursor: pointer;
+  opacity: 1;
+}
+
+#prevnext #prev:hover a::after,
+#prevnext #next:hover a::after {
+  transform: scaleX(1);
+}
+
+#prevnext #prev::before,
+#prevnext #prev::after,
+#prevnext #next::before,
+#prevnext #next::after {
+  position: absolute;
+  width: 16px; height: 4px; content: ' ';
+  background: #e0e0e0;
+  transition: background .15s;
+}
+
+#prevnext #prev:hover::before,
+#prevnext #prev:hover::after,
+#prevnext #next:hover::before,
+#prevnext #next:hover::after {
+  background: #4A90E2;
+}
+
+#prevnext #prev::before,
+#prevnext #prev::after {
+  left: 0;
+  transform-origin: 2px 2px;
+}
+
+#prevnext #next::before,
+#prevnext #next::after {
+  right: 0;
+  transform-origin: 14px 2px;
+}
+
+#prevnext #prev::before,
+#prevnext #next::after {
+  transform: rotate(45deg);
+}
+
+#prevnext #prev::after,
+#prevnext #next::before {
+  transform: rotate(-45deg);
+}
+
+
+
 /*********** footer ***********/
 
 .footer {
@@ -338,7 +428,7 @@ h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
   display: flex; align-items: center; justify-content: space-between;
   flex-direction: column;
   height: 16px;
-  opacity: .25;
+  opacity: .5;
   transition: opacity .15s;
 }
 
