complete pin docs

--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -32,6 +32,8 @@
     <a href="/docs/pipe">pipe</a>
     <hr>
     <a href="/docs/fork-join">fork/join</a>
+    <hr>
+    <a href="/docs/reduce">reduce</a>
 
     <br><br>
 
@@ -63,9 +65,13 @@
     <br><br>
 
     <h3>Advanced</h3>
+    <a href="/docs/memory">Memory management</a>
+    <hr>
     <a href="/docs/emission">Emission and context</a>
     <hr>
-    <a href="/docs/memory">Memory management</a>
+    <a href="/docs/pin-map">PinMap</a>
+    <hr>
+    <a href="/docs/interfaces">Interfaces</a>
     <hr>
     <a href="/docs/under-the-hoold">Under the hood</a>
 
