--- a/docs/templates/pin.njk
+++ b/docs/templates/pin.njk
@@ -354,4 +354,21 @@ c.send(2); a.send(true);</code>
   <a class="button" href="https://stackblitz.com/edit/connective-pin-example" target="_blank">TRY IT!</a>
 </div>
 
+<br><br>
+
+<h2 id="further-reading">Further reading</h2>
+
+<ul>
+  <li>
+    <a href="https://github.com/CONNECT-platform/connective/blob/master/src/pin/test/pin.test.ts" target="_blank">
+      Specification (test suite)
+    </a>
+  </li>
+  <li>
+    <a href="https://github.com/CONNECT-platform/connective/blob/master/src/pin/pin.ts" target="_blank">
+      Source code
+    </a>
+  </li>
+</ul>
+
 {% endblock %}
