--- a/docs/templates/source.njk
+++ b/docs/templates/source.njk
@@ -23,6 +23,9 @@ document.addEventListener('click', () =&gt; b.send('B'));</code>
   <a class="button" href="https://stackblitz.com/edit/connective-src-ex1" target="_blank">TRY IT!</a>
 </div>
 
+A source is a <a href="/docs/pin">Pin</a> and have all of its properties, though connecting to a source
+can lead to unpredictable behavior.
+
 <h2 id="clear">Clearing up</h2>
 
 Like other pin types, <span code>source()</span> has a <span code>.clear()</span> method that you should
