--- a/docs/templates/pin.njk
+++ b/docs/templates/pin.njk
@@ -3,7 +3,7 @@
 {% block content %}
 <h1 id="">Pin</h1>
 
-<span code>pin()</span> is a relay for incoming events/data:
+<span code>pin()</span> is a relay for incoming events/data.
 <img src="/docs/assets/animations/pin.svg" class="animation"/>
 
 <i>Pin</i> is the parent class of most of more elaborate types of pins in <b>CONNECTIVE</b>, representing
