--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -31,7 +31,7 @@
     <hr>
     <a href="/docs/pipe">pipe</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/fork">fork</a>
     <hr>
     <a href="/docs/reduce">reduce</a>
 
@@ -60,7 +60,7 @@
     <hr>
     <a href="/docs/proxy">proxy</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/join">join</a>
 
     <br><br>
 
